--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body {
 
 .chat-container {
   background: white;
-  width: 100%;
-  max-width: 480px;
-  height: 90vh;
+  width: 600px;
+  height: 650px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
